存储特征和搜图函数

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 candle-core = "0.2.1"
 candle-nn = "0.2.1"
 image = "0.24.7"
+rmp-serde = "1.1.2"
+serde = "1.0.188"
 tokenizers = "0.14.0"
