--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ image = "0.24.7"
 rmp-serde = "1.1.2"
 serde = "1.0.188"
 tokenizers = "0.14.0"
+xjbutil = { version = "0.9.0-ECHO", default-features = false, features = ["minhttpd"] }
