--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 candle-core = "0.2.1"
 candle-nn = "0.2.1"
 image = "0.24.7"
+libheif-rs = "0.22.0"
 rmp-serde = "1.1.2"
 serde = "1.0.188"
 serde_json = "1"
