--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ serde = "1.0.188"
 serde_json = "1"
 tokenizers = "0.14.0"
 xjbutil = { version = "0.9.0-ECHO", default-features = false, features = ["minhttpd"] }
+
+[patch.crates-io]
+libheif-rs = { path = "./patched-3rd/libheif-rs" }
+libheif-sys = { path = "./patched-3rd/libheif-sys" }
