--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,22 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-win64:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
+    - name: cache vcpkg
+      uses: actions/cache@v3
+      with:
+        path: ${{ env.VCPKG_ROOT }}/installed
     - name: setup vcpkg
       run: vcpkg install libheif:x64-windows-static
     - name: Build
       run: |
+        $env:VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT
         $env:RUSTFLAGS='-Ctarget-feature=+crt-static'
         cargo build --release --all-features
+    - uses: actions/upload-artifact@v3
+      with:
+        name: win64
+        path: target/release/imgfind.exe
