--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
     - name: cache vcpkg
       uses: actions/cache@v3
       with:
+        key: vcpkg-win64
         path: ${{ env.VCPKG_ROOT }}/installed
     - name: setup vcpkg
       run: vcpkg install libheif:x64-windows-static
