--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,24 @@ jobs:
       with:
         name: win64
         path: target/release/imgfind.exe
+  
+  build-android:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: cache vcpkg
+      uses: actions/cache@v3
+      with:
+        key: vcpkg-android
+        path: ${{ env.VCPKG_INSTALLATION_ROOT }}/installed
+    - name: setup vcpkg
+      run: vcpkg install libheif:arm64-android
+    - name: setup cargo-ndk
+      run: |
+        cargo install cargo-ndk
+        rustup target add aarch64-linux-android armv7-linux-androideabi
+    - name: Build
+      run: |
+        export VCPKG_ROOT=$VCPKG_INSTALLATION_ROOT
+        export NDK_HOME=$ANDROID_NDK_PATH
+        cargo ndk --platform 21 --target aarch64-linux-android build --release --all-features
