use ndk, fix cache

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,13 +14,13 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
+    - name: setup vcpkg
+      run: vcpkg install libheif:x64-windows-static
     - name: cache vcpkg
       uses: actions/cache@v3
       with:
         key: vcpkg-win64
         path: ${{ env.VCPKG_INSTALLATION_ROOT }}/installed
-    - name: setup vcpkg
-      run: vcpkg install libheif:x64-windows-static
     - name: Build
       run: |
         $env:VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT
@@ -37,10 +37,13 @@ jobs:
     - uses: actions/checkout@v3
     - name: setup
       run: |
-        cargo install cross
         wget https://github.com/flaribbit/imgfind/releases/download/model/libheif.so -O .github/libheif.so
+        rustup target add aarch64-linux-android
     - name: Build
-      run: cross build --release --all-features --target aarch64-linux-android
+      run: |
+        export NDK_HOME=$ANDROID_NDK_PATH
+        export PATH=$NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH
+        cargo build --release --all-features --target aarch64-linux-android
     - uses: actions/upload-artifact@v3
       with:
         name: android-aarch64
