--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,9 @@ jobs:
       run: |
         export NDK_HOME=$ANDROID_NDK_PATH
         export PATH=$NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH
+        export CC=aarch64-linux-android21-clang
+        export CXX=aarch64-linux-android21-clang++
+        export AR=llvm-ar
         cargo build --release --all-features --target aarch64-linux-android
     - uses: actions/upload-artifact@v3
       with:
